--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -17,6 +17,7 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Intro Blurb", name: "description", widget: "text"}
       - {label: "Image", name: "image", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Location", name: "place", widget: "map"}
   - name: "pages"
     label: "Pages"
     files:
